--- a/connection.html
+++ b/connection.html
@@ -147,7 +147,7 @@
         // }
 
         $('.ajaxForm').on('submit', function(event) {
-            event.preventDefault(); // prevent reload
+            event.preventDefault(); // prevent reloader in the code
             
             var formData = new FormData(this);
             formData.append('service_id', 'service_msaagjo');
