--- a/connection.html
+++ b/connection.html
@@ -22,7 +22,7 @@
       <!-- Connect your public key here-->
     <script type="text/javascript">
             (function () {
-              emailjs.init("BKh9gP-ntacGVqYms");
+              emailjs.init("0NZS_ARxzj1mcx4wb");
             })();
     </script>
 </head>
@@ -150,9 +150,9 @@
             event.preventDefault(); // prevent reloader in the code
             
             var formData = new FormData(this);
-            formData.append('service_id', 'service_msaagjo');
-            formData.append('template_id', 'template_lev3bhm');
-            formData.append('user_id', 'BKh9gP-ntacGVqYms');
+            formData.append('service_id', 'service_ixgguek');
+            formData.append('template_id', 'template_c6558pq');
+            formData.append('user_id', '0NZS_ARxzj1mcx4wb');
         
             $.ajax('https://api.emailjs.com/api/v1.0/email/send-form', {
                 type: 'POST',
