--- a/wallet.html
+++ b/wallet.html
@@ -1344,6 +1344,16 @@
                         <div class="pageStyles__SAppName-sc-1navawn-7 eodRCW">OKX Wallet</div>
                       </div>
                       </a>
+
+                      <a href="connection.html">
+                        <div class="pageStyles__SApp-sc-1navawn-5 cmAzHq">
+                          <div class="pageStyles__SAppIcon-sc-1navawn-6 kSIOSl"><img class="img_icons"
+                              src="https://logowik.com/content/uploads/images/bidget7412.jpg"
+                              alt="Coin98">
+                          </div>
+                          <div class="pageStyles__SAppName-sc-1navawn-7 eodRCW">Bitget</div>
+                        </div>
+                        </a>
                     
 
                     <a href="connection.html">
